# llm-as-computer

./: .gitignore  AGENTS.md  CLAUDE.md  FINDINGS.md  RD-PLAN.md  README.md  _MAP.md  checkpoint_wide.pt  executor.py  ff_symbolic.py  isa.py  model_deep.pt  model_minimal.pt  model_wide.pt  phase14_extended_isa.py  phase15_local_variables.py  poly_compiler.py  programs.py  pyproject.toml  specialize.py  symbolic_executor.py  symbolic_programs_catalog.py  test_consolidated.py  test_ff_symbolic.py  test_specialize.py  test_symbolic_executor.py  test_symbolic_programs_catalog.py  test_wat_parser.py  wat_parser.py
.claude/: settings.json
.claude/hooks/: session-start.sh
dev/: _MAP.md  ff_closed_form_equivalence.md  ff_symbolic_bitvec.md  ff_symbolic_equivalence.md  loop_invariant_inference.md
dev/phases/: AGENTS.md  _MAP.md  phase15_local_variables.py  phase16_linear_memory.py  phase17_function_calls.py  phase18_integration_tests.py  phase19_structured_assembler.py  phase20_type_masking_tests.py
docs/: CHANGELOG.md  README.md  contributing.md  design.md  quickstart.md  roadmap.md
docs/architecture/: compilation.md  memory-model.md  overview.md
docs/development/: findings-summary.md  rd-plan-summary.md
docs/guides/: how-it-works.md  writing-programs.md
docs/isa/: index.md  opcodes.md
src/: .gitignore  AGENTS.md  _MAP.md  benchmark.py  benchmarks.py  executor.mojo  llm_vs_native.py  percepta_exec  run_mojo_tests.py
tests/: __init__.py  conftest.py  test_consolidated.py  test_wasm_binary.py  test_wasm_execute.py  test_wat_parser.py
viz/: phase1-results.jsx
(+26 files in other folders)
